fix(header): shift header to column when vw is smaller than 700px

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,6 +45,7 @@ time {
 
 .app-title {
   font-size: calc(30px + 2vmin);
+  min-width: 320px;
   color: white;
   text-align: left;
 }
@@ -121,6 +122,7 @@ h3 {
   position: sticky;
   top: 30px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 }
 
@@ -145,6 +147,7 @@ p {
   justify-content: space-between;
   width: 75vmin;
   max-width: 300px;
+  min-width: 200px;
   max-height: 30px;
 }
 
@@ -274,6 +277,24 @@ p {
   }
 }
 
+@media only screen and (max-width: 700px) {
+  .app-header {
+    height: calc(12vmax);
+  }
+
+  #app-info {
+    height: calc(5vmax);
+    justify-content: center;
+  }
+
+  .app-header-content {
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .timestamp {
     margin: auto;
@@ -360,12 +381,6 @@ p {
     position: inherit;
     z-index: auto;
   }
-
-  /* .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  } */
 
   .user-content {
     border: none;
